tests/valid/ConstrainedList_Valid_12.whiley
import whiley.lang.*

function f(int x) -> [int]:
    return [x]

method main(System.Console sys) -> void:
    assume f(0) == [0]
