tests/invalid/List_Invalid_6.whiley
import * from whiley.lang.*

function f([int] a) -> int:
    return a
